3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

*Makefile.in, aclocal.m4, configure: Rebuilt generated files.
lib/Makefile.am: Update list of help files to install.
server/skills.c: Do not reveal a hidden DM in attempt_jump().
server/skills.c: Do not reveal a hidden DM in steal().
server/player.c: Ignore hidden DM in stand_near_hostile(). Formerly it always
   returned false if a hidden DM was present.
Andreas Kirschbaum 2005-07-15

server/c_object.c: Improved pickup. You can now do pickup +bow, or pickup -shield.
 Much simpler then fiddling with sums of 2^x values.
Ryo 2005-07-15

server/c_party.c: Make party passwords with a length of 8 characters work
   again.
lib/artifacts: Fix type of lockpicks of quality/high quality.
Andreas Kirschbaum 2005-07-15

Those commits remove the dependency on the plugin towards the library. All functions
 used from the plugin are hooked, instead of being called directly. This fixes bugs
 under Windows, and simplifies compilation. Also, many new callbacks were defined.
Affected files:
 include/plugin.h plugproto.h sproto.h
 plugin/plugin_python.c
 server/plugins.c
Note that at some point some functions could be moved out of plugin_python and put in
 plugin_general to be shared between different plugins.
Ryo 2005-07-15

Those commits remove the whole "glue/callback" logic. Instead functions are just
defined as external, and should be implemented (even as dummy) by all programs.
Affected files:
 common/arch.c button.c glue.c init.c item.c living.c logger.c los.c map.c object.c
  time.c treasure.c
 crossedit/stubs.c: new file with dummy functions.
 crossedit/Makefile.[in|am]: add this new file.
 include/funcpoint.h libproto.h sproto.h