@@ -17,6 +17,11 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+server/{c_misc.c, monster.c, pets.c}, include/player.h: Add new "arena"
+   petmode which allows pets to attack players and other pets while in the
+   arena.
+Alex Schultz 2005-07-16
+
 *Makefile.in, aclocal.m4, configure: Rebuilt generated files.
 lib/Makefile.am: Update list of help files to install.
 server/skills.c: Do not reveal a hidden DM in attempt_jump().
